Fixed code in dark mode

--- a/css/post.scss
+++ b/css/post.scss
@@ -26,7 +26,6 @@ main.post {
     padding: 20px;
     font-size: 0.9rem;
     border-radius: 5px;
-    background-color: $white;
     overflow-x: auto;
   }
 
